attempt to fix DT-1725, search blog post button is misaligned in windows mobile

--- a/less/theme.less
+++ b/less/theme.less
@@ -258,6 +258,10 @@ td {
     }
     .form-group {
         margin-bottom: 0;
+        vertical-align: top;
+        input {
+            margin-bottom: 0;
+        }
     }
     @media @mobile {
         .form-group .input {
